force-app/main/default/objects/Alias__c/Alias__c.object-meta.xml
<CustomObject>
    <description>Clients and prospects grouping</description>
    <label>Alias</label>
    <nameField>
        <label>Alias Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aliases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>