force-app/main/default/objects/Alias__c/fields/Sales_Limit_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Limit_Status__c</fullName>
    <label>Sales Limit Status</label>
    <length>5</length>
    <type>Text</type>
</CustomField>