force-app/main/default/objects/Alias__c/fields/Single_Client__c.field-meta.xml
<CustomField>
    <fullName>Single_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Client</label>
    <type>Checkbox</type>
</CustomField>