force-app/main/default/objects/Alias__c/listViews/Aliases_UK.listView-meta.xml
<ListView>
    <fullName>Aliases_UK</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Sales_Limit_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Single_Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>GBR</value>
    </filters>
    <label>Aliases UK</label>
</ListView>