force-app/main/default/objects/Alias__c/listViews/Aliases_USA_CAN_MEX.listView-meta.xml
<ListView>
    <fullName>Aliases_USA_CAN_MEX</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Single_Client__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Limit_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country2__c</field>
        <operation>equals</operation>
        <value>ANGUILLA,ANTIGUA AND BARBUDA,ARGENTINA,ARUBA,BAHAMAS,BARBADE,BARBADOS,CANADA,COLOMBIA,COSTA RICA,DOMINICAIN REPUBLIC,MEXICO,USA</value>
    </filters>
    <label>Aliases USA CAN MEX</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Area_AMERICAS</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>