force-app/main/default/objects/Alias__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Single_Client__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Limit_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>