force-app/main/default/objects/Alias__c/listViews/New_Aliases.listView-meta.xml
<ListView>
    <fullName>New_Aliases</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Country__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Sales_Limit_Status__c</columns>
    <columns>Single_Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Aliases</label>
    <sharedTo>
        <roleAndSubordinatesInternal>CSC_DIRECTOR_EUROPE</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>