force-app/main/default/objects/Alias__c/listViews/Single_Client_Aliases.listView-meta.xml
<ListView>
    <fullName>Single_Client_Aliases</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Single_Client__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Single Client Aliases</label>
</ListView>